# cpp-modern-2023-09-11

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  Dockerfile.alt
_exercises/ex-algorithms-with-lambdas/: basic_algorithms.cpp
_exercises/ex-constexpr/: constexpr_ex.cpp
_exercises/ex-move-semantics/: paragraph.hpp  tests_move_semantics.cpp
_exercises/ex-optional/: optional_ex.cpp
_exercises/ex-shared-ptr/: observer.cpp
_exercises/ex-unique-ptr/: fwd_list.hpp  tests_fwd_list.cpp
any/: tests_any.cpp
ctad/: tests_ctad.cpp
fold-expressions/: tests_fold_expressions.cpp
ifs/: tests_ifs.cpp
lambdas/: lambdas.cpp
move-semantics/: move_semantics_1.cpp  move_semantics_2.cpp  move_semantics_3.cpp  perfect_forwarding.cpp
optional/: tests_optional.cpp
smart-pointers/: CMakeLists.txt  fwd_list.cpp  fwd_list.hpp  smart_pointers.cpp
string-view/: tests_string_view.cpp
structured-bindings/: tests_structured_bindings.cpp
variant/: CMakeLists.txt  tests_variants.cpp
